[gd_scene load_steps=8 format=3 uid="uid://blj5g47uwo7m0"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_5g6v2"]
[ext_resource type="Texture2D" uid="uid://d38ceuoo614k4" path="res://assets/bg.png" id="1_s2jh7"]
[ext_resource type="PackedScene" uid="uid://cr3pl7yfk32tb" path="res://scenes/pipe.tscn" id="2_h58j0"]
[ext_resource type="PackedScene" uid="uid://b6xt1pam4caki" path="res://scenes/bird.tscn" id="3_4ap2d"]
[ext_resource type="PackedScene" uid="uid://d2ort7tfi33lg" path="res://scenes/ground.tscn" id="4_kx1e6"]
[ext_resource type="PackedScene" uid="uid://snrvq7jkapgf" path="res://scenes/game_over.tscn" id="6_yk7bg"]
[ext_resource type="PackedScene" uid="uid://bb3fdugwleuxg" path="res://scenes/high_score_game_over.tscn" id="7_501dp"]

[node name="Main" type="Node"]
script = ExtResource("1_5g6v2")
pipe_scene = ExtResource("2_h58j0")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_s2jh7")
offset = Vector2(432, 384)

[node name="Bird" parent="." instance=ExtResource("3_4ap2d")]

[node name="Ground" parent="." instance=ExtResource("4_kx1e6")]
z_index = 1

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="ScoreLabel" type="Label" parent="."]
z_index = 1
offset_right = 170.0
offset_bottom = 58.0
theme_override_font_sizes/font_size = 40
text = "SCORE: 0"

[node name="HighScoreLabel" type="Label" parent="."]
z_index = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -281.0
offset_bottom = 55.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 40
text = "HIGH SCORE: 0"

[node name="SubmittedLabel" type="Label" parent="."]
offset_left = 263.0
offset_top = 524.0
offset_right = 591.0
offset_bottom = 579.0
theme_override_font_sizes/font_size = 40
text = "Score Submitted!"

[node name="GameOver" parent="." instance=ExtResource("6_yk7bg")]

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HighScoreGameOver" parent="." instance=ExtResource("7_501dp")]

[connection signal="hit" from="Ground" to="." method="_on_ground_hit"]
[connection signal="timeout" from="PipeTimer" to="." method="_on_pipe_timer_timeout"]
[connection signal="restart" from="GameOver" to="." method="_on_game_over_restart"]
[connection signal="restart" from="HighScoreGameOver" to="." method="_on_high_score_game_over_restart"]
[connection signal="submit" from="HighScoreGameOver" to="." method="_on_high_score_game_over_submit"]
